2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am: Update from GNULIB.
	* readlink.c, xreadlink.c, xreadlink.h: Add from GNULIB.
	* Makefile.gnulib, Makefile.in: Regenerated.

2004-11-03  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* getpass.c, setenv.h: Update from GNULIB.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* test-getdate.sh (getdate): Do not assume 'diff -u' is
	universally available.
	* Makefile.am (getdate_SOURCES): Add allocsa.c sources needed by
	getdate on Solaris.
	* Makefile.in: Regenerated.

2004-11-01  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "setenv.c", "unsetenv.c", "allocsa.h" and "setenv.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* test-getdate.sh: Test a date relative to a specified date and one of
	the failing dates from the rcs2-7 test in src/sanity.sh.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* Makefile.am (TESTS): Add test-getdate.sh.
	(check_PROGRAMS): Add getdate.
	(getdate_*): Add info to build getdate.
	(MOSTLYCLEANFILES): Add files that might be generated by
	test-getdate.sh.
	* allocsa.c, allocsa.h, setenv.c setenv.h, unsetenv.c: New files from
	GNULIB.
	* test-getdate.sh: Add some new dates and expect correct output.

2004-10-27  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c (not_equal_tm): New patch from GNULIB.

2004-10-26  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "rpmatch.c" and "yesno.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move error.h to its own section.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add yesno.h.
	* rpmatch.c, yesno.h: New files from GNULIB.